# IsPrinterSell

./: .env  LICENSE  manage.py  pd.db  pd.db-shm  pd.db-wal  pyproject.toml
src/alder/: __init__.py
src/alder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/alder/application/: event_bus.py
src/alder/domain/: entities.py  events.py
src/alder/infrastructure/: async_runner.py
src/alder/infrastructure/db/: models.py  unit_of_work.py
src/alder/infrastructure/whatsapp/: meta_cloud.py
src/alder/interfaces/django_app/: settings.py
src/alder/interfaces/django_app/sales/: forms.py  urls.py  views.py
src/alder/interfaces/django_app/sales/templates/sales/: base.html  client_new.html  dashboard.html  sale_new.html
src/pd/: bootstrap.py
src/pd/application/: __init__.py  ports.py
src/pd/application/services/: pricing.py  sales.py
src/pd/domain/: __init__.py  value_objects.py
src/pd/infrastructure/: __init__.py
src/pd/infrastructure/db/: session.py
src/pd/infrastructure/etl/: excel_importer.py
src/pd/infrastructure/obsidian/: vault_writer.py
src/pd/infrastructure/repositories/: client_repo.py  sale_repo.py
src/pd/interfaces/django_app/: container.py  urls.py  wsgi.py
src/pd/interfaces/django_app/sales/: apps.py
src/pd/interfaces/django_app/sales/templates/sales/: sale_detail.html  sale_list.html
tests/: test_pricing.py  test_sales_use_case.py
